# agentx

./: .gitignore  README.md  pyproject.toml
src/agent_migrate/: __init__.py  _compat.py  pipeline.py
src/agent_migrate/classifier/: __init__.py  classify.py
src/agent_migrate/cli/: main.py
src/agent_migrate/detector/: __init__.py  detect.py
src/agent_migrate/ir/: __init__.py  schema.py
src/agent_migrate/mapper/: __init__.py  map.py
src/agent_migrate/parser/: __init__.py  parse.py
src/agent_migrate/plugins/: __init__.py
src/agent_migrate/renderer/: __init__.py  render.py
src/agent_migrate/reporter/: __init__.py  report.py
tests/: conftest.py
tests/fixtures/claude/: CLAUDE.md
tests/fixtures/claude/commands/: explain-code.md  fix-lint.md
tests/fixtures/claude/hooks/: pre-commit.sh
tests/fixtures/claude/rules/: no-console-log.md
tests/fixtures/claude/skills/review-pr/: SKILL.md
tests/fixtures/codex/: AGENTS.md
tests/fixtures/codex/.codex/: config.toml
tests/fixtures/codex/.codex/agents/: reviewer.toml
tests/integration/: test_cli.py
tests/unit/: test_detector.py  test_ir.py  test_mapper.py  test_parser.py  test_pipeline.py  test_plugins.py  test_regressions.py  test_renderer.py  test_reporter.py
