[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-migrate"
version = "0.1.0"
description = "Semantic transpiler for agent artifacts between Claude and Codex ecosystems"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12,<1",
    "pydantic>=2.5,<3",
    "rich>=13,<14",
    "tomli>=2,<3",
    "tomli-w>=1,<2",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
]

[project.scripts]
agentx = "agent_migrate.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_migrate"]

[tool.hatch.build.targets.sdist]
include = ["src/agent_migrate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
