[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-migrate"
version = "0.1.0"
description = "Semantic transpiler for agent artifacts between Claude and Codex ecosystems"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12,<1",
    "pydantic>=2.5,<3",
    "rich>=13,<14",
    "tomli>=2,<3",
    "tomli-w>=1,<2",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.6",
]

[project.scripts]
agentx = "agent_migrate.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_migrate"]

[tool.hatch.build.targets.sdist]
include = ["src/agent_migrate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "SIM108",  # ternary is not always clearer
    "B008",    # typer requires function calls (Option/Argument) in defaults
    "UP045",   # Optional[X] kept: typer evaluates annotations at runtime on py39
]
